#50: WIP Paketübergabe Chat, models, basic stuff

--- a/turtlemail/templates/turtlemail/layout.jinja
+++ b/turtlemail/templates/turtlemail/layout.jinja
@@ -7,9 +7,9 @@
            {% if url_name == "deliveries" %}class="active"{% endif %}>
             <span class="btm-nav-label">{{ _("Deliveries") }}</span>
         </a>
-        <a href="{{ url("stays") }}"
-           {% if url_name == "stays" %}class="active"{% endif %}>
-            <span class="btm-nav-label">{{ _("Stays") }}</span>
+        <a href="{{ url("chats") }}"
+           {% if url_name == "communication" %}class="active"{% endif %}>
+            <span class="btm-nav-label">{{ _("Communication") }}</span>
         </a>
         <a href="{{ url("profile") }}"
            {% if url_name == "profile" %}class="active"{% endif %}>
