--- a/turtlemail/templates/turtlemail/layout.jinja
+++ b/turtlemail/templates/turtlemail/layout.jinja
@@ -27,8 +27,8 @@
                        {% if url_name == "deliveries" %}class="focus"{% endif %}>{{ _("Deliveries") }}</a>
                 </li>
                 <li>
-                    <a href="{{ url("stays") }}"
-                       {% if url_name == "stays" %}class="focus"{% endif %}>{{ _("Stays") }}</a>
+                    <a href="{{ url("chats") }}"
+                       {% if url_name == "chats" %}class="focus"{% endif %}>{{ _("Communication") }}</a>
                 </li>
             </ul>
         </div>
