wip: #50 Packetübergabe Chat: django channels

--- a/turtlemail/templates/turtlemail/_chat.jinja
+++ b/turtlemail/templates/turtlemail/_chat.jinja
@@ -1,10 +1,5 @@
+<div hx-ext="ws" ws-connect="/ws/chat/{{ object.pk }}/">
 {% for msg in chat_msgs %}
-<div class="chat {% if user == msg.author %}chat-end{% else %}chat-start{% endif %}">
-  <div class="chat-header">
-    {{ msg.author }}
-    <time class="text-xs opacity-50">{{ msg.created_at|date }} {{ msg.created_at|time }}</time>
-  </div>
-  <div class="chat-bubble">{{ msg.content|safe }}</div>
-  <div class="chat-footer opacity-50">{% if msg.status == "R" %}✓{% endif %}</div>
-</div>
+{% include "_chat_message.jinja" %}
 {% endfor %}
+</div>
