--- a/turtlemail/templates/turtlemail/chats.jinja
+++ b/turtlemail/templates/turtlemail/chats.jinja
@@ -15,8 +15,8 @@
         </div>
         <form>
           <div class="join w-full">
-            <input class="input input-bordered join-item w-full" placeholder="{{ gettext('Message') }}" />
-            <button type="submit" class="btn join-item rounded-r-full">{{ gettext("send") }}</button>
+            <input class="input input-bordered join-item w-full" name="message" placeholder="{{ gettext('Message') }}" />
+            <button ws-send class="btn join-item rounded-r-full">{{ gettext("send") }}</button>
           </div>
         </form>
       </div>
