--- a/turtlemail/templates/turtlemail/_chat_message.jinja
+++ b/turtlemail/templates/turtlemail/_chat_message.jinja
@@ -1,9 +1,14 @@
-<div class="chat {% if user == msg.author %}chat-end{% else %}chat-start{% endif %}">
+{% if new_msg %}<div hx-swap-oob="beforeend:#listofmsgs">{% endif %}
+<div id="{{ msg.hashid }}" class="chat {% if user == msg.author %}chat-end{% else %}chat-start{% endif %}">
   <div class="chat-header">
     {{ msg.author }}
     <time class="text-xs opacity-50">{{ msg.created_at|date }} {{ msg.created_at|time }}</time>
   </div>
   <div class="chat-bubble">{{ msg.content|safe }}</div>
-  <div class="chat-footer opacity-50">{% if user == msg.author and msg.status == "R" %}✓{% endif %}</div>
+  <div class="chat-footer opacity-50">{% if user == msg.author %}✓{% if msg.status == "R" %}✓{% endif %}{% endif %}</div>
 </div>
-
+{% if new_msg %}</div>
+<div hx-swap-oob="outerHTML:#msg_form">
+{% include "turtlemail/_chat_form.jinja" %}
+</div>
+{% endif %}
