--- a/turtlemail/templates/turtlemail/_chat_message.jinja
+++ b/turtlemail/templates/turtlemail/_chat_message.jinja
@@ -1,5 +1,6 @@
-{% if new_msg %}<div hx-swap-oob="beforeend:#listofmsgs">{% endif %}
-<div id="{{ msg.hashid }}" class="chat {% if user == msg.author %}chat-end{% else %}chat-start{% endif %}">
+{% if new_msg %}<div hx-swap-oob="beforeend:#listofmsgs">
+{% elif update_msg %}<div hx-swap-oop="outerHTML:#msg{{ index }}"{% endif %}
+<div id="msg{{ index }}" class="chat {% if user == msg.author %}chat-end{% else %}chat-start{% endif %}">
   <div class="chat-header">
     {{ msg.author }}
     <time class="text-xs opacity-50">{{ msg.created_at|date }} {{ msg.created_at|time }}</time>
