wip: #50 Packetübergabe Chat: highlight active chat

--- a/turtlemail/templates/turtlemail/_chat.jinja
+++ b/turtlemail/templates/turtlemail/_chat.jinja
@@ -7,3 +7,6 @@
 </div>
 {% include "turtlemail/_chat_form.jinja" %}
 </div>
+<div hx-swap-oob="outerHTML:#chat_list">
+{% include "turtlemail/_chat_list.jinja" %}
+</div>
