--- a/turtlemail/templates/turtlemail/packet_detail.jinja
+++ b/turtlemail/templates/turtlemail/packet_detail.jinja
@@ -57,6 +57,16 @@
                                 <strong>{{ date_description }}</strong>:
                                 {{ _("Hand over to %(name)s", name=step.next_step.stay.user.username) }}
                             </p>
+                            {% if step.status == step.ONGOING %}
+                                <p class="text-base-content/80">
+                                    {{ _("Once handed over, %(name)s will report this step as completed on their side.", name=step.next_step.stay.user.username) }}
+                                </p>
+                            {% endif %}
+                        {% endif %}
+                        {% if step.status == step.PROBLEM_REPORTED or step.next_step.status == step.PROBLEM_REPORTED %}
+                            <p class="text-base-content/80">
+                                {{ _("There was a problem reported with this handover. The support team will reach out to you via email to find a solution.") }}
+                            </p>
                         {% endif %}
                     </div>
                     {% if step.status == step.SUGGESTED %}
