--- a/turtlemail/templates/turtlemail/packet_detail.jinja
+++ b/turtlemail/templates/turtlemail/packet_detail.jinja
@@ -69,6 +69,14 @@
                             </p>
                         {% endif %}
                     </div>
+                    {% if step.status in [step.ACCEPTED, step.ONGOING] %}
+                        <form action="{{ url("route_step_cancel", pk=step.id) }}"
+                              method="post"
+                              hx-boost="true"
+                              hx-push-url="false">
+                            <button class="w-full join-item btn">{{ _("Cancel this handover") }}</button>
+                        </form>
+                    {% endif %}
                     {% if step.status == step.SUGGESTED %}
                         <a href="{{ url("update_route_step_request", pk=step.id) }}?on_packet_detail_page=true"
                            hx-target="#route_step_request_box"
