#50: review fixes, internationalization of system messages

--- a/turtlemail/templates/turtlemail/layout.jinja
+++ b/turtlemail/templates/turtlemail/layout.jinja
@@ -8,7 +8,7 @@
             <span class="btm-nav-label">{{ _("Deliveries") }}</span>
         </a>
         <a href="{{ url("chats") }}"
-           {% if url_name == "communication" %}class="active"{% endif %}>
+           {% if url_name == "chats" %}class="active"{% endif %}>
             <span class="btm-nav-label">{{ _("Communication") }}</span>
         </a>
         <a href="{{ url("profile") }}"
