--- a/turtlemail/templates/turtlemail/chats.jinja
+++ b/turtlemail/templates/turtlemail/chats.jinja
@@ -1,15 +1,17 @@
 {% extends "turtlemail/layout.jinja" %}
 {% block content %}
     <div id="chats" class="w-full max-w-6xl flex flex-row">
-      {% if chat_list %}
-      {% include "turtlemail/_chat_list.jinja" %}
-      <div id="chat" class="w-full bg-white rounded flex flex-col h-screen">
-        <div id="messages" class="h-full">
-          <p class="font-bold text-center">{{ gettext("Click a chat from the list to agree upon package exchanges.") }}</p>
-        </div>
-      </div>
-      {% else %}
-        <div class="w-full"><p class="font-bold text-center">{{ gettext("You haven\'t scheduled any package exchanges.") }}</p></div>
-      {% endif %}
+        {% if chat_list %}
+            {% include "turtlemail/_chat_list.jinja" %}
+            <div id="chat" class="w-full bg-white rounded flex flex-col h-screen">
+                <div id="messages" class="h-full">
+                    <p class="font-bold text-center">{{ gettext("Click a chat from the list to agree upon package exchanges.") }}</p>
+                </div>
+            </div>
+        {% else %}
+            <div class="w-full">
+                <p class="font-bold text-center">{{ gettext("You haven't scheduled any package exchanges.") }}</p>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
