--- a/turtlemail/templates/turtlemail/_chat_form.jinja
+++ b/turtlemail/templates/turtlemail/_chat_form.jinja
@@ -1,7 +1,9 @@
 <form id="msg_form">
-  <div class="join w-full">
-    <input required class="input input-bordered join-item w-full" name="message" placeholder="{{ gettext('Message') }}"/>
-    <button ws-send class="btn join-item rounded-r-full">{{ gettext("send") }}</button>
-  </div>
+    <div class="join w-full">
+        <input required
+               class="input input-bordered join-item w-full"
+               name="message"
+               placeholder="{{ gettext("Message") }}" />
+        <button ws-send class="btn join-item rounded-r-full">{{ gettext("send") }}</button>
+    </div>
 </form>
-
