feat: Show stay settings in profile

--- a/turtlemail/templates/turtlemail/profile.jinja
+++ b/turtlemail/templates/turtlemail/profile.jinja
@@ -17,5 +17,6 @@
             </div>
         </div>
         {% include "turtlemail/locations/list.jinja" %}
+        {% include "turtlemail/stays/list.jinja" %}
     </div>
 {% endblock %}
