--- a/turtlemail/templates/turtlemail/locations/create_button.jinja
+++ b/turtlemail/templates/turtlemail/locations/create_button.jinja
@@ -1,4 +1,4 @@
 <button type="button"
         hx-get="{{ url("htmx-create-location") }}"
         hx-swap="outerHTML"
-        class="my-4 btn btn-primary">{{ _("Add location") }}</button>
+        class="mt-2 btn btn-primary">{{ _("Add location") }}</button>
