--- a/turtlemail/templates/turtlemail/index.jinja
+++ b/turtlemail/templates/turtlemail/index.jinja
@@ -17,6 +17,17 @@
         </div>
         <div class="z-10 w-full h-6 rotate-180 bg-base-100 mask-waves"></div>
     </div>
+    {# Remove after the experiment ends #}
+    <div role="alert" class="alert alert-info">
+        <svg xmlns="http://www.w3.org/2000/svg"
+             fill="none"
+             viewBox="0 0 24 24"
+             class="h-6 w-6 shrink-0 stroke-current">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
+            </path>
+        </svg>
+        <span>{{ gettext("Join the Turtlemail experiment!") }} <a href="/pages/experiment/">{{ gettext("Read more.") }}</a></span>
+    </div>
     <section class="flex flex-wrap items-center justify-center gap-16 px-4 mt-16 md:px-8">
         <div class="prose-xl scroll-mt-32" id="social-links-anchor">
             <h2 class="font-bold lg:text-5xl">{{ _("Delivered by Humans") }}</h2>
@@ -89,8 +100,8 @@
             <img src="{{ static("turtlemail/img/logo-bmbf.svg") }}" alt="{{ _("Funded by the Bundesministerium für Bildung und Forschung") }}" class="px-8 py-4 bg-white rounded">
         </a>
         <nav class="grid grid-flow-col gap-4">
-            <a href="#" class="link link-hover">{{ _("Imprint") }}</a>
-            <a href="#" class="link link-hover">{{ _("Privacy Policy") }}</a>
+            <a href="/pages/legal/" class="link link-hover">{{ _("Legal Notice") }}</a>
+            <a href="/pages/privacy/" class="link link-hover">{{ _("Privacy Policy") }}</a>
             <a href="https://git.hack-hro.de/turtlemail/turtlemail"
                class="link link-hover">{{ _("Source Code") }}</a>
         </nav>
