--- a/turtlemail/templates/flatpages/default.jinja
+++ b/turtlemail/templates/flatpages/default.jinja
@@ -1,2 +1,9 @@
-{% extends "turtlemail/layout.jinja" %}
-{% block content %}{{ flatpage.content }}{% endblock %}
+{% extends "turtlemail/public_layout.jinja" %}
+{% block content %}
+    <div class="flex justify-center mb-8">
+        <div class="py-16 prose">
+            <h1>{{ flatpage.title }}</h1>
+            {{ flatpage.content }}
+        </div>
+    </div>
+{% endblock %}
