--- a/turtlemail/templates/turtlemail/index.jinja
+++ b/turtlemail/templates/turtlemail/index.jinja
@@ -1,33 +1,5 @@
-{% extends "turtlemail/base.jinja" %}
-{% block body %}
-    <div class="sticky top-0 z-10">
-        <div class="min-h-0 pb-0 navbar bg-base-100">
-            <div class="navbar-start">
-                <h1>
-                    <a class="text-xl btn btn-ghost" href="{{ url("index") }}">
-                        <img src="{{ static("turtlemail/img/logo/turtlemail-logo.svg") }}" alt="{{ _("turtlemail") }}" class="w-full h-8" />
-                    </a>
-                </h1>
-            </div>
-            <div class="gap-2 navbar-end">
-                {# Disabled until the experiment starts #}
-                {# <a class="btn btn-sm btn-primary" href="{{ url("signup") }}">{{ _("Sign up") }}</a> #}
-                {# <a class="btn btn-sm btn-ghost" href="{{ url("login") }}">{{ _("Log in") }}</a> #}
-            </div>
-        </div>
-        <div class="z-10 w-full h-6 rotate-180 bg-base-100 mask-waves"></div>
-    </div>
-    {# Remove after the experiment ends #}
-    <div role="alert" class="alert alert-info">
-        <svg xmlns="http://www.w3.org/2000/svg"
-             fill="none"
-             viewBox="0 0 24 24"
-             class="h-6 w-6 shrink-0 stroke-current">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-            </path>
-        </svg>
-        <span>{{ gettext("Join the Turtlemail experiment!") }} <a href="/pages/experiment/">{{ gettext("Read more.") }}</a></span>
-    </div>
+{% extends "turtlemail/public_layout.jinja" %}
+{% block content %}
     <section class="flex flex-wrap items-center justify-center gap-16 px-4 mt-16 md:px-8">
         <div class="prose-xl scroll-mt-32" id="social-links-anchor">
             <h2 class="font-bold lg:text-5xl">{{ _("Delivered by Humans") }}</h2>
@@ -43,8 +15,7 @@
                    class="w-12 h-12 transition-all hover:scale-110">
                     {% include "turtlemail/icons/signal_messenger.jinja" %}
                 </a>
-                <a href="https://matrix.to/#/#turtlemail:systemausfall.org"
-                   class="text-4xl font-bold tracking-tighter transition-all hover:scale-110">[m]</a>
+                <a title="{{ _("Matrix/Element Chat") }}" href="https://matrix.to/#/#turtlemail:systemausfall.org" class="text-4xl font-bold tracking-tighter transition-all hover:scale-110">[m]</a>
                 {# Mail address is obfuscated to combat spam #}
                 {# djlint:off #}
                 <a href="m&#97;ilt&#111;&#58;%74e%6&#49;&#37;6D&#64;&#116;&#37;7&#53;&#114;&#37;74&#108;em%61&#105;l&#46;%6&#49;%7&#48;p"
@@ -76,34 +47,17 @@
     <div class="bg-primary">
         <div class="w-full h-8 bg-secondary mask-waves"></div>
     </div>
-    <section class="flex flex-wrap items-center justify-center gap-16 px-4 py-12 md:px-8 bg-secondary text-secondary-content">
+    <section class="flex flex-wrap items-center justify-center gap-16 px-4 pt-12 pb-20 md:px-8 bg-secondary text-secondary-content">
         <div class="max-w-md prose-lg">
             <h2 class="text-3xl">{{ _("Join the turtlemail experiment") }}</h2>
-            <p>{% trans trimmed link="#" %}Help us to test our software. {% endtrans %}</p>
             <p>
-                {% trans %}The experiment will start soon. If you would like to take part, follow us <a class="link" href="#social-links-anchor">on social media</a> or
-                <a href="#social-links-anchor" class="link">write us a mail</a>
-                to get notified when we start!{% endtrans %}
+                {% trans trimmed link="#" %}Help us to test our software. {% endtrans %}
+                <a class="link" href="{{ url("experiment") }}">{{ _("Read more about the experiment here.") }}</a>
             </p>
-            {# Disabled until the experiment starts #}
-            {# <a class="btn btn-lg btn-primary btn-wide" href="{{ url("signup") }}">{{ _("Create a free account") }}</a> #}
+            <a class="btn btn-lg btn-primary btn-wide" href="{{ url("signup") }}">{{ _("Create a free account") }}</a>
         </div>
         <div class="flex-grow w-1/3 max-w-lg overflow-hidden rounded-lg shadow-md aspect-[3/2]">
             <img class="w-full" src="{{ static("turtlemail/img/screenshots/en/request.png") }}" alt="{{ _("Screenshot showing a request to make a delivery in the turtlemail app") }}">
         </div>
     </section>
-    <div class="bg-secondary">
-        <div class="w-full h-8 bg-accent mask-waves"></div>
-    </div>
-    <footer class="p-8 footer footer-center bg-accent text-accent-content">
-        <a href="https://www.bmbf.de">
-            <img src="{{ static("turtlemail/img/logo-bmbf.svg") }}" alt="{{ _("Funded by the Bundesministerium für Bildung und Forschung") }}" class="px-8 py-4 bg-white rounded">
-        </a>
-        <nav class="grid grid-flow-col gap-4">
-            <a href="/pages/legal/" class="link link-hover">{{ _("Legal Notice") }}</a>
-            <a href="/pages/privacy/" class="link link-hover">{{ _("Privacy Policy") }}</a>
-            <a href="https://git.hack-hro.de/turtlemail/turtlemail"
-               class="link link-hover">{{ _("Source Code") }}</a>
-        </nav>
-    </footer>
 {% endblock %}
