--- a/turtlemail/templates/turtlemail/_chat_form.jinja
+++ b/turtlemail/templates/turtlemail/_chat_form.jinja
@@ -1,7 +1,7 @@
 <form id="msg_form">
     <div class="w-full join">
         <input required
-               class="w-full rounded-tl-none rounded-bl-box input input-bordered join-item"
+               class="w-full border-b-0 border-l-0 rounded-none input input-bordered join-item"
                name="message"
                placeholder="{{ gettext("Message") }}" />
         <button ws-send
