--- a/turtlemail/templates/turtlemail/_chat_list.jinja
+++ b/turtlemail/templates/turtlemail/_chat_list.jinja
@@ -1,11 +1,14 @@
-<div id="chat_list"
-     hx-swap-oob="outerHTML"
-     class="absolute z-10 flex flex-col items-center h-full overflow-hidden bg-base-100 -left-72 w-80">
-    <ul class="flex-grow menu">
-        {% for chat in chat_list %}
-            {% include "turtlemail/_chat_list_item.jinja" %}
-        {% endfor %}
-    </ul>
-    <button class="btn-sm btn btn-circle"
-            onclick="this.parentNode.classList.toggle('left-0')">></button>
+<div id="chat_list" hx-swap-oob="outerHTML" class="h-full pl-12 md:pl-0">
+    <div class="absolute z-10 flex flex-col items-center w-full h-full sm:static bg-base-100 -left-full"
+         style="left: calc(-100% + (12 * 0.25rem))">
+        <ul class="flex-grow menu">
+            {% for chat in chat_list %}
+                {% include "turtlemail/_chat_list_item.jinja" %}
+            {% endfor %}
+        </ul>
+        <button class="self-end p-1 m-2 btn-sm btn btn-circle"
+                onclick="this.parentNode.classList.toggle('!left-0')">
+            {% include "turtlemail/icons/menu.jinja" %}
+        </button>
+    </div>
 </div>
