--- a/turtlemail/templates/turtlemail/_chat_list.jinja
+++ b/turtlemail/templates/turtlemail/_chat_list.jinja
@@ -1,6 +1,8 @@
 <div id="chat_list" hx-swap-oob="outerHTML" class="h-full pl-12 md:pl-0">
     <div class="absolute z-10 flex flex-col items-center w-full h-full sm:static bg-base-100 -left-full"
+        {# djlint:off #}
          style="left: calc(-100% + (12 * 0.25rem))">
+        {# djlint:on #}
         <ul class="flex-grow menu">
             {% for chat in chat_list %}
                 {% include "turtlemail/_chat_list_item.jinja" %}
