--- a/turtlemail/templates/turtlemail/_chat_list.jinja
+++ b/turtlemail/templates/turtlemail/_chat_list.jinja
@@ -1,14 +1,16 @@
-<div id="chat_list" hx-swap-oob="outerHTML" class="h-full pl-12 md:pl-0">
-    <div class="absolute z-10 flex flex-col items-center w-full h-full sm:static bg-base-100 -left-full"
+<div id="chat_list"
+     hx-swap-oob="outerHTML"
+     class="h-full pl-12 border-r md:pl-0 border-base-300">
+    <div class="absolute z-10 flex flex-col items-center w-full h-full md:static bg-base-100 -left-full"
         {# djlint:off #}
          style="left: calc(-100% + (12 * 0.25rem))">
         {# djlint:on #}
-        <ul class="flex-grow menu">
+        <ul class="flex-grow w-full menu">
             {% for chat in chat_list %}
                 {% include "turtlemail/_chat_list_item.jinja" %}
             {% endfor %}
         </ul>
-        <button class="self-end p-1 m-2 btn-sm btn btn-circle"
+        <button class="self-end p-1 rounded-md btn btn-ghost btn-square md:hidden"
                 onclick="this.parentNode.classList.toggle('!left-0')">
             {% include "turtlemail/icons/menu.jinja" %}
         </button>
